incorporated a lot Dave"s latest comments

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -8,15 +8,19 @@ Gordo?]
 	D. Wittman,$^{1}$
 	M. J. Jee,$^{1}$ 
 	J. Hughes,$^{3}$ 
-	F. Menanteau,$^{3}$
+	F. Menanteau,$^{4, 5}$
 	\newauthor
-	C. Sif\'{o}n$^{4}$\\
+	C. Sif\'{o}n$^{6}$\\
 $^{1}$Department of Physics, University of California Davis, One Shields
 Avenue, Davis, CA 95616, USA\\ 
 $^{2}$Lawrence Livermore National Laboratory, P.O. Box 808, Livermore, CA 94551-0808, USA \\
 $^3$Department of Physics \& Astronomy,
 Rutgers University, 136 Frelinghysen Rd., Piscataway, NJ 08854, USA\\
-$^{4}$Leiden Observatory, Leiden University, PO Box 9513, NL-2300 RA
+$^{4}$National Center for Supercomputing Applications, University of
+Illinois at Urbana-Champaign, 1205 W. Clark St, Urbana IL, 61801, USA\\
+$^{5}$Department of Astronomy, University of Illinois at Urbana-Champaign,
+W. Green Street, Urbana, IL 61801, USA\\
+$^{6}$Leiden Observatory, Leiden University, PO Box 9513, NL-2300 RA
 Leiden, Netherlands\\}
 \begin{document}
 \date{arXiV 666} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
@@ -40,17 +44,17 @@ fraction of the radio relic, we constrain the estimate of the
 angle between the sky and the merger axis to be $\alpha = 21\degree
 \pm^9_{11}$. We find the relative 3D merger speed of El Gordo to be
 $2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$. The two possible
-time-since-collision estimated are $0.46\pm^{0.09}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
+time-since-collision estimates are $0.46\pm^{0.09}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
 for the outgoing and returning scenario respectively.
 We put our estimates of
 the time-since-collision into context by showing that if the time-averaged
-shock velocity approximately equal or smaller than the collisional velocity of the
-corresponding subcluster $< 1100~ \kilo\meter~\second^{-1}$ in the {\it
-center of mass frame}, the two subclusters are more likely to be moving towards, rather
+shock velocity is approximately equal to or smaller than the collisional velocity of the
+corresponding subcluster in the 
+center of mass frame, the two subclusters are more likely to be moving towards, rather
 than away from each other, after the apocenter. 
 We compare and contrast the merger scenario of El Gordo with that of the Bullet
-Cluster, and show that this late-stage merging scenario might help
-explain why the southeast dark matter lensing peak of El Gordo is
+Cluster, and show that this late-stage merging scenario 
+explains why the southeast dark matter lensing peak of El Gordo is
 closer to the merger center than the southeast cool core. 
 %Finally, we provide our insight on what information from simulations and
 %observations would help us better constrain the merger scenarios for other
@@ -81,20 +85,22 @@ the merger dynamics in multiple ways.  Ever since the discovery of El Gordo
 in the Atacama Camera Telescope survey (ACT; \citealt{Marriage11}), there
 has been an ongoing effort for
 collecting comprehensive data for El Gordo.
-From the spectroscopy and Dressler-Schecter test for the member galaxies
+From the spectroscopy and Dressler-Schectman test for the member galaxies
 in \cite{Sifon13}, El Gordo is confirmed to be a binary merger 
 without significant substructures. This picture is further supported by the
 weak lensing analysis by \cite{Jee13}. The weak lensing analysis shows
-a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
-(See Figure~\ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
-turbulent flow due to object of higher density moving through fluids, while in the southeast, it shows
-the highest X-ray emissivity indicative of a cool gas core southeast of the
-wake. The cool gas core may have passed from the northwest to the southeast
+a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively 
+(See Figure~\ref{fig:config}). 
+El Gordo also has an interesting X-ray morphology. In the northwest, it shows a wake feature, i.e.,
+turbulent flow due to object of higher density moving through fluids, while
+in the southeast, it shows the highest X-ray emissivity indicative of a
+cool gas core southeast of the wake. The most straightforward explanation for this morphology is that the
+cool gas core has passed from the northwest to the southeast
 to have caused this morphology (\citealt{M12}, hereafter M12). 
-The extended mass distribution of El Gordo also makes it a good
+The high mass of El Gordo also makes it a good
 gravitational lens. \cite{Zitrin13} have found multiple strong
 gravitationally lensed images around the center region of El Gordo. 
-On the outskirt, strong radio emission is detected in
+On the outskirts, strong radio emission is detected in
 the NW and the SE respectively. These radio emitting regions show steep spectral
 index gradients and are identified as radio relics associated with shock waves
 created from the merger \citep{L13}. 
@@ -111,32 +117,30 @@ created from the merger \citep{L13}.
 		southeast radio relic (SE relic) \citep{L13}.
 		\label{fig:config}}
 \end{figure}
-El Gordo is one of the small samples of galaxy clusters ($\sim50$) that has
+El Gordo is one of $\sim 50$ of galaxy clusters ($\sim50$) that has
 been associated with a radio relic and shows dissociation between the X-ray
-gas and the DM subclusters. Even fewer of them have been studied in
-great details, making El Gordo a valuable candidate for further analysis.\par 
+gas and the DM subclusters. \par 
 In this paper, we combined most of the available information of El Gordo
 with the main goal of giving estimates of
 the dynamical parameters after taking into account all
 constraints and uncertainties due to the missing variables.
-Determining the time-since-collision of mergers of similar clusters helps
-us reconstruct different stages of a cluster merger.
-Since mergers of clusters proceed on the time-scale of millions of year,
-observations of each cluster only provides a snapshot of a particular type
-of merger. In order to understand the merger process observationally, 
-we need to identify different stages of similar dissociative mergers and
-gather statistics to understand the physics of the mergers.  
+Since mergers of clusters proceed on the time-scale of many millions of
+years, one of the most important missing variables to infer is the
+time-since-collision (TSC).
+Determining the TSC of similar clusters helps
+us reconstruct different stages and recover the physics of a cluster merger.
+
 Another crucial piece of missing information is the 3D
 configuration, i.e.\ the angle between the plane of the sky and the merger
 axis called the projection angle $\alpha$. Since most of the dynamical
 observables are projected quantities while the modelling of physics
 requires 3D
 variables, the deprojection contributes the
-largest amount of uncertainties to the dynamical variables \citepalias{D13}.
+largest amount of uncertainty to the dynamical variables \citepalias{D13}.
 From the morphology of the double relic of El Gordo, it is believed that
 $\alpha$ should be small. For mergers with a
 large projection angle, the radio emission would be projected towards the
-center of the merger, which is hard to be detected \citep{Vazza11}.
+center of the merger, which inhibits detection \citep{Vazza11}.
 However, the only quantitative constraints on $\alpha$ for El Gordo is from
 \cite{L13} with a lower bound of $\alpha \geq 11.6 \degree$. A tighter
 constraint on $\alpha$ is needed for us to reduce uncertainty of the
@@ -147,8 +151,7 @@ space by directly drawing samples from the probability density functions
 (PDFs) of
 the observables. 
 This work based on Monte Carlo simulation is particularly important since
-it is forbiddingly expensive to simulate and analyze clusters similar to El
-Gordo in high resolution. Previous attempts at modeling El Gordo with hydrodynamical
+the phase space of possible merger scenarios is large. Previous attempts at modeling El Gordo with hydrodynamical
 simulations such as \cite{Donnert13} and \cite{Molnar14} provided only in
 total a dozen possible configurations of El Gordo, which do not
 reflect the input uncertainties. Another approach for
@@ -191,20 +194,22 @@ resolution radio observation conducted by \cite{L13} at 610 \mega Hz and
 found another extended source of radio relic in the east (E) (See Fig.~\ref{fig:config}). Among the radio relics, the NW relic possesses the most extended geometry
 (0.56 Mpc in length), and its physics, including the
 polarization and Mach number were studied in the greatest detail. Such
-information allows us to constrain the $\alpha$ and the merger scenario. The E relic
+information allows us to constrain $\alpha$ and the merger scenario. The E relic
 was also reported to have a resolved length of 0.27 Mpc, while the SE relic
 was found to overlap with a point source \citep{L13}. Both the E and SE
-relic are closer to the SE DM subcluster, we therefore considered them to
+relic are closer to the SE DM subcluster, so we considered them to
 originate from the same merger shock in the following work.
 
 \section{METHOD -- Monte Carlo simulation} 
 We used the collisionless 
 dark-matter-only Monte Carlo modeling code written by \citetalias{D13}, to
-compute the physics of between the first and second core-passage of the DM subclusters. 
+model the DM subclusters, to find out the dynamics between the first and
+the second core-passage of the subclusters. 
 In the D13 code, the time evolution of the
 head-on merger was computed based on an analytical, dissipationless model
 assuming that the only dominant force is the gravitational attraction from
-the masses of two truncated Naverro-Frenk-White (hereafter NFW) DM halos. 
+the masses of two truncated Navarro-Frenk-White (hereafter NFW) DM halos
+\citep{Navarro96}. 
 In the simulation, many realizations of the collision are
 computed by drawing random realizations of the PDFs of the inputs. Most
 input variables are obtained from previous observations ($\vec{D}$).  One
@@ -218,7 +223,9 @@ and the calculation of the output variables of the $j$-th realization can be den
 \begin{equation}
 	(\vec{\theta}^\prime)^{(j)} = g(\alpha^{(j)}, \vec{D}^{(j)}), 
 \end{equation}    
-for a suitable function $g$ that describes conservation of energy during the collision of the two NFW halos due to the mutual gravitational attraction.  In particular, the required $\vec{D}$, included the masses ($M_{200_{NW}},M_{200_{SE}}$) the redshifts ($z_{NW}, z_{SE}$) and the
+for a suitable function $g$ that describes conservation of energy during
+the collision of the two NFW halos due to the mutual gravitational
+attraction.  In particular, the required $\vec{D}$ includes the masses ($M_{200_{NW}},M_{200_{SE}}$) the redshifts ($z_{NW}, z_{SE}$) and the
 projected separation of the two subclusters ($d_{proj}$).  See
 Table~\ref{tab:inputs} for quantitative descriptions of the sample PDFs, and
 the outputs with physical importance are described in detail in Section
@@ -233,8 +240,7 @@ the outputs with physical importance are described in detail in Section
 %physical model $M$ which we parametrize using variables in Table 1
 %($\vec{\theta}$).
 Finally, we excluded realizations that produce any unphysical output
-values. An example excluded realization may give estimate of the
-time-since-collision to be larger than age of universe at the
+values, such astime-since-collision to be larger than the age of universe at the
 cluster redshift.  We refer to this process of excluding unphysical
 realizations as applying weights. 
 To ensure convergence of the output PDFs, in total, 2 million realizations
@@ -258,9 +264,9 @@ $4500~\kilo\meter~\second^{-1}$ (based on the mass estimates of
 10^{15} M_{\sun}$) indicate that it is highly unlikely that the pairwise
 velocities would be $> 3000~\kilo \meter~\second^{-1}$ under $\Lambda$CDM.
 (\citealt{Thompson12}, \citealt{Lee2010}).  Other major assumptions for
-modeling systems with this code include negligible impact parameter. There
-is a study indicating that the impact parameter of El Gordo
-may be as large as $300$ kpc $ \approx 40\%~r_s$ \citep{Molnar14},
+modeling systems with this code include negligible impact parameter.
+However, \citealt{Molnar14} indicating that the impact parameter of El Gordo
+may be as large as $300$ kpc $ \approx 40\%~r_s$,
 where $r_s$ is the characteristic core
 radius of the NFW halo with the mass of the SE subcluster. According to
 \cite{Ricker98}, the resulting remnant of bimodal cluster mergers would
@@ -269,7 +275,7 @@ have drastic differences only when the impact parameter $> 10~ r_{\text{core}}$.
 r_{200}$ affected merger dynamics only at the $\sim$10\% level.   
 Other assumptions in this simulation include negligible dynamical friction
 during the merger, negligible mass accretion and negligible self-interaction
-of dark matter. Discussion of the effects of each of these assumptions are
+of dark matter. Discussion of the effects of each of these assumptions is
 included in \citetalias{D13}.  
 \par
 \subsection{Inputs of the Monte Carlo simulation} \label{sec: inputs}
@@ -311,13 +317,11 @@ respect to us, using
 	v_i = \left[ \frac{(1+z_i)^2 - 1 }{(1+z_i)^2 + 1 }\right]c,
 \end{equation}
 where $i=1, 2$ represents the two subclusters, and $c$ is the speed of
-light. The radial velocity was calculated by: 
+light. The relative radial velocity was calculated by: 
 \begin{equation}
 	\Delta v_{rad}(t_{obs}) = \frac{|v_2 - v_1|}{1-\frac{v_1 v_2}{c^2}}.
 \end{equation}
-Due to the estimates of the subcluster redshifts are close to
-one another with overlapping confidence intervals, we obtained a low 
-radial velocity difference of the two subclusters to be
+We obtained a low radial velocity difference of the two subclusters to be
 $476~\pm~242~\kilo\meter~\second^{-1}$ (See Fig. \ref{fig:
 bootstrap_redshift}). 
 The radial velocity difference of $586~\kilo \meter~\second^{-1}$ reported by \citetalias{M12} 
@@ -503,12 +507,12 @@ this polarization weight in addition to the default weights.
 \subsection{Extension to the Monte Carlo simulation - Determining merger
 scenario with radio relic position by model comparison}
 
-One of the biggest questions involving the merger is whether El Gordo was
+One of the biggest questions involving the merger is whether El Gordo is
 observed during a returning or outgoing phase. We compared the two merger
 scenarios by making use of the observed projected separation of the relic from the
 center of mass.
 Simulations of cluster mergers such as the work of \citet{Paul2011b},
-\citet{VanWeerenRJ2011}, and \citet{Springel2007} showed that, merger shock
+\citet{VanWeerenRJ2011}, and \citet{Springel2007} showed that merger shock
 fronts that may correspond to the radio relics 1) are generated near the
 center of mass of the subclusters close to the time of the first
 core-passage, 2) propagate outward with the shock speed decreasing only slightly.
@@ -557,8 +561,8 @@ equations \ref{eqn:NW_speed} and \ref{eqn:SE_speed} to reflect that the
 shock is driven by the merger. We note that the propagation speed of the
 shock is also determined by the temperature, density and other details of
 the gas medium (\citealt{Prokhorov2007}, \citealt{Springel2007},
-\citealt{Milosavljevic07}), so the shock may propagate with $\beta > 1$ without violating any physics
-laws. However, we note that merger shocks from cosmological
+\citealt{Milosavljevic07}), so it is physically possible for the shock to
+propagate with$\beta > 1$. However, we note that merger shocks from cosmological
 simulations are reported to show a low Mach number between 1 and 3
 \citep{Bruggen2011}, with an even tighter upper limit on the Mach number of
 $\sim 1$ reported for mergers of comparable masses \citep{Markevitch2007}.    
@@ -566,7 +570,8 @@ Simulation of the Bullet Cluster by \cite{Springel2007} also indicates that the
 propagation velocity of the shock evolves such that $\beta \approx 0.95$ within
 $\sim 0.4~\giga$yr after the collision. For the analysis of El Gordo,
 we suggest $\beta \approx 0.9$ to be the most likely value given that the $TSC$ of
-El Gordo is longer. 
+El Gordo is longer. We consider $\beta$ as large as $1.5$ to illustrate the
+extreme to which one must go to avoid the returning model.
 \label{sec:positionprior}
 
 \section{RESULTS} 
@@ -576,7 +581,7 @@ scenarios, we found that El Gordo is more likely to be observed at a returning
 phase with an estimate of $TSC_1 = 0.91\pm^{0.22}_{0.39}$ Gyr. This puts the
 estimate of the time of collision to be when the age of the universe was
 $\sim5.4$ Gyr. We present an
-overview of all the estimated variables in table~\ref{tab:outputs}, with
+overview of all the estimated variables in Table~\ref{tab:outputs}, with
 results only applying the default weights on the left hand side of the table
 and those also applied with the polarization weight on the right hand side.
 Furthermore, we include the plots of all the marginalized PDFs with the
@@ -594,8 +599,8 @@ the merger center.  It is therefore reasonable to assume the reported speed
 from \cite{L13} to be an estimate of the {\it relative collisional speed
 between the subclusters}, instead of the collision speed of the NW
 subcluster {\it relative to the center-of-mass}.
-Magnitude of the relative $v_{3D}$ of the subclusters dropped as the
-subclusters climbed out of the gravitational potential of each other, and
+The magnitude of the relative $v_{3D}$ of the subclusters dropped as the
+subclusters climbed out of their mutual gravitational potential, and
 reduced to $v_{3D}(t_{obs}) = 940~\kilo\meter~\second^{-1}$ at
 the time of observation.\par 
 %The projection angle of the El Gordo is estimated to be
@@ -608,7 +613,7 @@ the time of observation.\par
 \subsection{Time-since-collision (TSC) and the merger scenario}
 The simulation gives two estimates for
 the time-since-collision, with $TSC_0 = 0.46\pm^{0.09}_{0.16}~\giga \text{yr}$
-and $TSC_1 =0.91\pm^{0.39}_{0.22}~\giga\text{yr}$. Both the estimates of
+and $TSC_1 =0.91\pm^{0.39}_{0.22}~\giga\text{yr}$ for the returning model. Both the estimates of
 $TSC_0$ and $TSC_1$ are compatible physical time-scales of observable
 features of El Gordo. Both estimates are lower than the approximate
 observable time-scale of the wake feature in the X-ray, i.e.\ the sound
@@ -632,7 +637,9 @@ $P(S_{proj} \cap S_{obs} | M_{ret}) / P(S_{proj} \cap S_{obs} | M_{out})$.
 The ratio of the two probabilities is found to be $\approx
 2.1$ for the NW relic and a relative probability of $\approx 460$ for the
 SE relic, favoring the returning scenario despite the
-uncertainties. (See appendix~\ref{app:Bayes_factor}). 
+uncertainties. (See appendix~\ref{app:Bayes_factor}). This scenario is
+further supported by the psoition of the cool core in the southseat as
+discussed in Section 5.  
 %Additionally, we
 %computed the Wald statistic that tests if the sample mean (observed
 %location) of the location of the relic is within the confidence interval of
@@ -665,7 +672,7 @@ radio relics, such as shown in \citet{Stroe14}. \par
 	\includegraphics[width=\linewidth]{our_guess_SE.png}
 	\caption{Comparison of the PDFs of the observed position of the SE relic (red bar
 	includes the 95\% confidence interval of location of the radio relic in
-the center of mass frame)}
+the center of mass frame).}
 \end{figure}
 \begin{figure}
 	\includegraphics[width=\linewidth]{TwoMnWBSG_2contour2d.png}
@@ -741,15 +748,15 @@ polarization weight does not change our estimates drastically.
 %-----------------------------------------------------------------------
 \subsection{Comparison of our study with other studies of El Gordo}
 We outline the qualitative agreement and disagreement between our
-simulations and other hydrodynamical simulations of El Gordo such as
+simulations and hydrodynamical simulations of El Gordo such as
 \cite{Donnert13} and \cite{Molnar14}. Our simulation focuses on giving PDF
 estimates of particular dynamical and kinematic variables, whereas the
 hydrodynamical simulations focused on understanding the detailed gas dynamics
 required to reproduce the X-ray observables and Sunyaev-Zeldovich
 observables of El Gordo. The goals,
 assumptions, and initial conditions of \cite{Donnert13} and \cite{Molnar14}
-are different from our simulations such that it is hard to come up with a
-fair comparison. \par 
+differ substantially with ours. However, our approach has the advantage of considering a much wider range of geometries and dynamical parameters, and is based on recently measured lensing masses.
+\par 
 Both hydrodynamical simulations were based on a few sets of initial
 conditions, instead of thorough sampling of the inputs. For example, both
 simulations made use of the mass estimates from the dynamics analysis
@@ -765,7 +772,7 @@ the escape velocity of the subclusters. From our simulation, there is a
 negligible number of realizations with $v_{3D}(t_{col}) >
 3000~\kilo\meter~\second^{-1}$. The range of projection angles suggested by
 \cite{Molnar14} of $\alpha \gtrsim 45\degree$ is also excluded by our
-polarization weight, whereas, we are unable to find information concerning
+polarization weight, whereas we are unable to find information concerning
 the projection angle of the simulation from \cite{Donnert13}, and we note
 that \cite{Donnert13}
 might have assumed $\alpha = 0$. \par 
@@ -777,18 +784,15 @@ By matching the simulated X-ray luminosity and the projected separation
 of $0.69$ Mpc to the corresponding observables, \cite{Donnert13} also reported their simulated work 
 to best match  observations at $\sim 0.15~\giga$yr after collision. 
 The $TSC_0$ from \cite{Donnert13} is below the estimated 95\% CI of
-$TSC_0$ from our work and this might be due to their assumption of a zero
-projection angle, it would take subclusters in our simulation with a
-non-zero projection angle a longer time to travel the same projected distance. 
+$TSC_0$ from our work.
 On the other hand, \cite{Donnert13} obtained a
 relative collisional velocity between the subclusters at $\sim
 2600~\kilo\meter~\second^{-1}$, which is compatible with our estimate of
 $2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$.  
 This agreement might be due to the similar assumptions of a low
 energy orbit and a small impact parameter as the initial conditions in the
-work of \cite{Donnert13} and our work. In conclusion, for a fair comparison
-of the physics of the merger, we suggest future hydrodynamical simulations
-to set initial conditions more consistent with our inputs.
+work of \cite{Donnert13} and our work. 
+Ideally, the hydrodynamic and Monte Carlo dynamical approaches should be combined, with new hydrodynamic simulations seeded with initial conditions motivated by the results presented here.
 
 
 \subsection{Comparison to the merger scenarios of other merging clusters of galaxies}
@@ -797,7 +801,7 @@ to set initial conditions more consistent with our inputs.
 	\includegraphics[width=\linewidth]{merger_scenario.pdf}
  \caption{Schematic evolution of cool core gas and DM displacements relative to the
 merger center of mass as a function of the phase ($TSC / T$), based on
-simulations of bimodal cluster merger by \citet{Mathis05}. During and
+simulations of a bimodal cluster merger by \citet{Mathis05}. During and
 shortly after core passage, ram pressure ($=\rho v^2$) exerts substantial
 force on the cool core, which then lags the DM. (This corresponds to the
 outgoing scenario of $TSC_0 / T$ indicated by the grey dotted line). Ram
@@ -876,7 +880,7 @@ away from the center of mass than the dark matter by as much as $\sim
 0.2~\mega$pc.  The gas northwest of the cool core of El Gordo shows a comet-like
 morphology with two tails that suggests outbound motion of the cool core, which may seem
 contradictory to the returning scenario. However, from our proposed merger
-scenario of El Gordo in Fig. \ref{fig:merger_scenario},
+scenario of El Gordo in Figure \ref{fig:merger_scenario},
 it is possible that the cool core and the DM are observed to be moving in
 opposite directions, with the DM subcluster started returning for a second core-passage. If the returning scenario is true, El Gordo would be one of the first
 clusters to be observed at a returning phase of the merger, after another
@@ -896,13 +900,13 @@ us a better picture of how a bimodal merger would behave at a later stage of a m
 This special merger scenario of El Gordo also raises a question: what phase
 of a merger or what type of mergers would allow the most stringent
 constraints on the self-interaction cross section of DM ($\sigma_{\text{SIDM}}$)? 
-The use of merging clusters as probes of $\sigma_{\text{SIDM}}$. 
-has been proposed and used in various literature.
+The use of merging clusters as probes of $\sigma_{\text{SIDM}}$ 
+has been proposed and used in various papers.
 (\citealt{Markevitch2004}, \citealt{Randall2008d}, \citealt{Merten2011},
 \citealt{Dawson12}). One common theme among such work is
 to make use of the observed offsets of the different components of the
 merging clusters for the estimation. One of the most popular methods proposed by
-\citealt{Markevitch2004} (i.e. method 1 in the paper) assumes the gas component would lag behind the corresponding DM
+\citealt{Markevitch2004} (method 1 in the paper) assumes the gas component would lag behind the corresponding DM
 subcluster along the direction of motion due to ram pressure stripping.   
 %and make use of the scattering depth $\tau_s = 1$ as an upper
 %limit of the scattering depth of DM for estimating
@@ -918,11 +922,13 @@ density peak or number density peaks would better represent the galaxy
 distributions. The galaxy number density map of El Gordo
 \citepalias{Jee13} shows noteworthy $\sim0.2~\mega$pc offset between the SE
 galaxy number density peak and the SE DM centroid, while there is almost no offset
-between the corresponding luminosity peak and DM centroid. Before there is a
+between the corresponding luminosity peak and DM centroid. 
+Before there is a
 conclusion about how the galaxy-DM offset would vary over
-the different phase of the merger Fig.~\ref{fig:merger_scenario}, it is
-helpful to have some understanding about clusters at a late-stage of the
-merger. 
+the different phases of the merger, 
+more understanding is required both of the late stages of mergers and of the behavior of galaxy number and luminosity densities in these mergers.
+
+
 \par 
 %For example, another method for constraining $\sigma_{\text{SIDM}}$ is to
 %compare the magnitude of the observed offset of galaxy and the corresponding DM
@@ -982,13 +988,14 @@ dynamics and scenario. Important questions concerning merging galaxy
 clusters pending for answers include:  
 \begin{itemize}
 \item What are the typical propagation velocities of the shock wave that
-corresponds to the radio relic in the	center of mass frame of the cluster?
+	corresponds to the radio relic {\it in the center of mass (CM) frame} of the cluster?
 \item What physical properties of the DM subclusters would correlate the
-	best with the time-evolution of the propagation velocity of the shock wave?  
+	best with the time-evolution of the propagation velocity of the shock
+	wave (in the CM frame)?  
 \item What is the typical duration
 after the merger for which radio relics are observable in terms of the merger
 core-passage time-scales? 
-\item How generalizable is the merger scenario in Fig.
+\item How generalizable is the merger scenario in Figure
 	\ref{fig:merger_scenario}?  
 \item How would the galaxy-DM offset evolve if we were to add that information
 	to Fig. \ref{fig:merger_scenario}?
@@ -1005,15 +1012,16 @@ Monte Carlo simulation, in particular, we
 		Fig.~\ref{fig:geom_geom}). By performing sensitivity analysis, we
 		showed that this weighting function helps reduce uncertainty for the dynamical
 		variables without changing the estimates drastically ($< 20\%$).\\ 
-	\item inferred a {\it relative} collisional velocity 
+	\item inferred the {\it relative} collisional velocity 
 		between the subclusters of El Gordo as 
 		$2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$  
-		(when the subcluster centroids coincided)\\ 
-	\item showed that a returning scenario is favored if the $\langle v_{NW relic}\rangle \leq
+		(at the time of pericenter)
+	\item showed that a returning scenario is favored if $\langle v_{NW relic}\rangle \leq
 		1000~\kilo
 		\meter~\second^{-1}$ and $\langle v_{SE relic}\rangle \leq
-		1800~\kilo\meter~\second^{-1}$between the collision and the observation in the
-		center-of-mass frame. It takes
+		1800~\kilo\meter~\second^{-1}$
+where the velocities are in the CM frame and angle brackets denote averaging over the time since pericenter
+		It takes
 		an unlikely high speed of $\langle v_{relic} \rangle \gg 1.5~v_{3D,
 		sub}(t_{col})$ for the outgoing scenario to be favored. \\ 
 	\item showed how our inferred
@@ -1022,7 +1030,7 @@ Monte Carlo simulation, in particular, we
 \end{enumerate}
 As large scale sky surveys come online, more cluster mergers at late
 stages of their merger will be discovered. El Gordo will serve as one of
-the best studied example of a bimodal cluster merger for comparison.  
+the best studied examples of a bimodal cluster merger for comparison.  
 \section{ACKNOWLEDGEMENTS}
 We thank Franco Vazza, Marcus Br\"{u}ggen and Surajit Paul for sharing
 their knowledge on the simulated properties of radio relic and merger
@@ -1217,7 +1225,7 @@ relic ($s_{obs}$).
 Quantitatively, we want to compute and compare the probability:  
 \begin{align} 
 	&P(s_{proj} \text{ compatible with }s_{obs} | M)  \label{eqn:prob}\\
-	&=\int f(S_{proj} \cap S_{obs} | M, \beta) f(\beta | M) d\beta\\
+	&=\iint f(S_{proj} \cap S_{obs} | M, \beta) f(\beta | M) d s_{proj} d\beta\\
 	&=\iint  f(s_{proj}|M, \beta) f(s_{obs}) f(\beta | M) d s_{proj}
 	d\beta, 
 \end{align}
