adding missing figure to repo

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -981,10 +981,16 @@ more understanding is required both of the late stages of mergers and of the beh
 %Cluster, which were studied by \citetalias{D13} using the Monte Carlo simulation.
 
 %
-\subsection{Improving constraints using prior knowledge from simulations}
+\subsection{Improving constraints of merger scenario using prior knowledge from simulations}
 This work has allowed us to examine
 what information would be needed to better understand the merger
-dynamics and scenario. Important questions concerning merging galaxy
+dynamics and scenario. Before this work, simulations of merger shocks have
+focused on providing estimates of the local conditions of the physics for
+the generation of the radio relic. In this work, we demonstrated that the global
+properties of the shocks, are also important. 
+We urge simulators to provide more estimates of the global
+properties of the shocks for understanding the merger scenario. 
+Important questions concerning merging galaxy
 clusters pending for answers include:  
 \begin{itemize}
 \item What are the typical propagation velocities of the shock wave that
@@ -1284,8 +1290,6 @@ $f(S_{proj} \cap S_{obs})$ to penalize the simulated values being different from
 %relic location is more compatible with the confidence interval of the returning
 %scenario. (See Figure~\ref{fig:waldtest})
 
-%
-%
 \begin{figure}
 	\includegraphics[width=\linewidth]{prob_ratio.png}
 	\caption{Probability ratio between the returning model (numerator) and
