adding fig for polarization weights

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1,8 +1,7 @@
 \input{style}
 \input{bib_alias}
-\title[The return of the merging galaxy subclusters of ACT-CL J0102-4915, El
-Gordo?]
-{The return of the merging galaxy subclusters of ACT-CL J0102-4915, El Gordo?}
+\title[The return of the merging galaxy subclusters of El Gordo?]
+{The return of the merging galaxy subclusters of El Gordo?}
 \author[K. Y. Ng et al.]{K. Y. Ng,$^{1}$
 	W. A. Dawson,$^{2}$ 
 	D. Wittman,$^{1}$
@@ -44,8 +43,8 @@ fraction of the radio relic, we constrain the estimate of the
 angle between the sky and the merger axis to be $\alpha = 21\degree
 \pm^9_{11}$. We find the relative 3D merger speed of El Gordo to be
 $2400\pm^{400}_{200}~\kilo\meter~\second^{-1}$. The two possible
-time-since-collision estimates are $0.46\pm^{0.09}_{0.16}$ Gyr and $0.91\pm^{0.22}_{0.39}$ Gyr
-for the outgoing and returning scenario respectively.
+estimates of the time-since-collision are $0.46\pm^{0.09}_{0.16}$ Gyr and
+$0.91\pm^{0.22}_{0.39}$ Gyr for the outgoing and returning scenario respectively.
 We put our estimates of
 the time-since-collision into context by showing that if the time-averaged
 shock velocity is approximately equal to or smaller than the collisional velocity of the
@@ -89,7 +88,8 @@ From the spectroscopy and Dressler-Schectman test for the member galaxies
 in \cite{Sifon13}, El Gordo is confirmed to be a binary merger 
 without significant substructures. This picture is further supported by the
 weak lensing analysis by \cite{Jee13}. The weak lensing analysis shows
-a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively 
+a mass ratio of $\sim$2:1  between the two main subclusters, named
+according to their location as the northwest (NW) and southeast (SE) subclusters respectively 
 (See Figure~\ref{fig:config}). 
 El Gordo also has an interesting X-ray morphology. In the northwest, it shows a wake feature, i.e.,
 turbulent flow due to object of higher density moving through fluids, while
@@ -136,7 +136,8 @@ axis called the projection angle $\alpha$. Since most of the dynamical
 observables are projected quantities while the modelling of physics
 requires 3D
 variables, the deprojection contributes the
-largest amount of uncertainty to the dynamical variables \citepalias{D13}.
+largest amount of uncertainty to the dynamical variables
+(\citealt{D13}, hereafter D13).
 From the morphology of the double relic of El Gordo, it is believed that
 $\alpha$ should be small. For mergers with a
 large projection angle, the radio emission would be projected towards the
@@ -175,8 +176,8 @@ within $r_{200}$ where the mass density is 200 times the critical density
 of the universe at the cluster redshift of $z = 0.87$. 
 \section{DATA} 
 We gathered and analyzed data from multiple sources. For assigning membership of galaxies to the two identified subclusters, we
-examined the spectroscopic data obtained from the Very Large Telescope (VLT) and
-Germini South as described in \citetalias{M12} and \citet{Sifon13}.
+examined the spectroscopic data obtained from the Very Large Telescope
+(VLT) as described in \citetalias{M12} and \citet{Sifon13}.
 For the weak-lensing mass estimation, we used the
 Monte Carlo Markov Chains (MCMC) mass estimates from \citetalias{Jee13}.
 See Table~\ref{tab:inputs} for descriptions of the PDFs of the input
@@ -987,9 +988,7 @@ what information would be needed to better understand the merger
 dynamics and scenario. Before this work, simulations of merger shocks have
 focused on providing estimates of the local conditions of the physics for
 the generation of the radio relic. In this work, we demonstrated that the global
-properties of the shocks, are also important. 
-We urge simulators to provide more estimates of the global
-properties of the shocks for understanding the merger scenario. 
+properties of the shocks, are also important for understanding the merger scenario. 
 Important questions concerning merging galaxy
 clusters pending for answers include:  
 \begin{itemize}
